--- a/lovelace/decluttering_templates/notification-template.yaml
+++ b/lovelace/decluttering_templates/notification-template.yaml
@@ -1,34 +1,89 @@
-# These are the variables you can use in your quickmenu
-# The ones you see here are the default ones, use any of
-# these variables in your config. (Do not change this file
-# unless you know what you are doing!)
+# These are the variables you can use in your decluttering
+# card. Add one or more variables in your decluttering-card.
+# The variables you see below are the default ones. 
+#
+# A standard decluttering-card config would look like:
+# - type: custom:decluttering-card
+#   template: this_templates_name
+#   variables:
+#     - entity: switch.test
+#     - name: test
+# 
+# All the variables you can use are within the default config
+# below. The variables you can use are the first word after each
+# dash -.
+#
+# If you omit adding variables to your decluttering-card
+# it will use defaults instead, which are defined below as well.
+# You can change the default config below. If you only enter a
+# few of the variables it will only use defaults for undefined
+# variables.
 
 # Default Config
 default:
-  # Icon
+  # Notification Options
+  - entity: input_boolean.test
+  - border-radius: var(--border-radius)
   - icon: home
-
-  # Content
-  - content: This is your home!
+  - lock: false
+  - size: 100%
+  - label: yourcontenthere
+  - name: yourcontenthere
+  - card_color: var(--homekit-card-off)
+  - tap_action: none
+  - hold_action:
+      action: more-info
+      haptic: light
+  - margin-right: 0px
+  - margin-left: 15px
+  - spin: false
+  - icon_color: white
+  - name_color: white
 
 #### #### #### #### #### #### #### #### #### #### #### #
 
 # Card Config
 # Do NOT change this unless you know what you are doing!
 card:
-  type: horizontal-stack
-  cards:
-    # - !include ../decluttering_templates/blank-card.yaml
-    - type: markdown
-    # Changed/Added in 0.11.2, color is now hardcoded white below. Why? Well because anything other than white looks bad!
-      style: |
-        ha-card {
-          background: [[color]];
-          border-radius: var(--border-radius);
-          font-size: 13px;
-          font-family: Helvetica;
-          color: white;
-        }
-      content: >
-        <ha-icon icon="mdi:[[icon]]"></ha-icon> [[content]]
-    # - !include ../decluttering_templates/blank-card.yaml
+  type: custom:button-card
+  name: '[[name]]'
+  deep_press: true
+  icon: 'mdi:[[icon]]'
+  size: '[[size]]'
+  lock: '[[lock]]'
+  aspect_ratio: 7/1
+  entity: '[[entity]]'
+  label: '[[label]]'
+  show_name: true
+  show_icon: true
+  show_state: false
+  show_label: false
+  show_last_changed: false
+  tap_action: '[[tap_action]]'
+  hold_action: '[[hold_action]]'
+  styles:
+    card:
+      - border-radius: '[[border-radius]]'
+      - --ha-card-background: '[[card_color]]'
+      - padding-top: '[[padding-top]]'
+      - padding-bottom: '[[padding-bottom]]'
+    name:
+      - font-size: '[[font_size]]'
+      # - font-family: Helvetica
+      - color: '[[name_color]]'
+      - justify-self: start
+      - padding-left: 13px
+    img_cell:
+      - align-self: start
+      - text-align: start
+      - margin-right: '[[margin-right]]'
+      - margin-left: '[[margin-left]]'
+    grid: 
+      - grid-template-areas: '"i n"'
+      - grid-template-columns: 8% 1fr
+      - grid-template-rows: 1fr
+    icon:
+      - color: '[[icon_color]]'
+  state:
+    - value: "off"
+      spin: '[[spin]]'
