--- a/assistants/homekit.yaml
+++ b/assistants/homekit.yaml
@@ -1,36 +1,36 @@
   auto_start: false
   filter:
     include_entities:
-      - media_player.living_room_sonos
+      # - media_player.living_room_sonos
 
-      - scene.dark_lights_on
-      - scene.welcome_home
-      - scene.watch_tv
-      - scene.ceiling_lights
-      - scene.morning_lights
+      # - scene.dark_lights_on
+      # - scene.welcome_home
+      # - scene.watch_tv
+      # - scene.ceiling_lights
+      # - scene.morning_lights
 
-      - binary_sensor.yard_door
-      - binary_sensor.balcony_door
-      - binary_sensor.dining_room_window
-      - binary_sensor.front_door_homebridge
-      - binary_sensor.back_door
+      # - binary_sensor.yard_door
+      # - binary_sensor.balcony_door
+      # - binary_sensor.dining_room_window
+      # - binary_sensor.front_door_homebridge
+      # - binary_sensor.back_door
 
-      - input_boolean.sonos
+      # - input_boolean.sonos
 
-      - script.air_cleaner_quiet
-      - switch.stefan_radiator
+      # - script.air_cleaner_quiet
+      # - switch.stefan_radiator
 
-      - script.media_system_on_off
-      - script.bedroom_tv_on_off
-      - script.tv_on_off
+      # - script.media_system_on_off
+      # - script.bedroom_tv_on_off
+      # - script.tv_on_off
 
-      - script.goodnight
-      - scene.movie_time
+      # - script.goodnight
+      # - scene.movie_time
 
-      - sensor.temperature_bedroom
-      - sensor.temperature_passage
-      - sensor.temperature_downstairs_bathroom
-      - sensor.temperature_stefan
+      # - sensor.bedroom_temperature
+      # - sensor.passage_temperature
+      # - sensor.downstairs_bathroom_temperature
+      # - sensor.stefan_temperature
       
       - light.walk_in_closet_lights
       - light.stairs_lights
@@ -56,3 +56,8 @@
       - light.stefan_lightstrip
       - light.upstairs_hallway_ceiling_light_level
       - light.kitchen_ceiling_spotlights_level
+
+      - input_boolean.goodnight_isa
+      - input_boolean.car_isa
+      - input_boolean.dnd_isa
+      - input_boolean.good_morning_isa
